--- a/DemoMessage.Api/appsettings.Development.json
+++ b/DemoMessage.Api/appsettings.Development.json
@@ -25,6 +25,9 @@
       }
     ]
   },
+  "ElasticConfiguration": {
+    "Uri": "http://elasticsearch:9200"
+  },
   "MessageBroker": {
     "Host": "amqp://rabbitmq:5672",
     "Username": "guest",
